# serial-key-generator

./: .gitignore  Cargo.toml  LICENSE  Readme.md  exampleconfig.json  keygen
builds/osx/v1.0/: keygen
builds/osx/v1.1/: keygen
builds/osx/v1.3/: keygen
src/: keygen.rs  main.rs
