[package]
name = "keygen"
version = "2.0.0"
authors = ["James Tease <james@jamestease.co.uk>"]
repository = "https://github.com/whostolemyhat/serial-key-generator"
homepage = "https://github.com/whostolemyhat/serial-key-generator"
documentation = "https://github.com/whostolemyhat/serial-key-generator"
license = "MIT"
description = "Binary to create a verifiable serial key from a seed."

[dependencies.serial-key]
path="../keygen-crate"

[dependencies]
regex = "0.2"
crc = "1.5"
clap = "2.24"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"